--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -281,6 +281,7 @@
     :hook (org-mode . bp/org-mode-setup)
     :config
     (setq org-ellipsis " ⌄")
+    (setq org-agenda-files '("~/Documents/org/TODOs.org"))
     (setq org-hide-emphasis-markers t))
 
   (use-package org-bullets
@@ -322,6 +323,13 @@
   (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
   (add-to-list 'org-structure-template-alist '("py" . "src python"))
+
+#+end_src
+
+** Org Agenda
+
+#+begin_src emacs-lisp
+
 
 #+end_src
 
