fixed x-clipboard lag on quitting

--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -7,6 +7,8 @@
 
   (setq inhibit-startup-message -1)
   (setq-default line-spacing 0.4)
+  ;; this fixes the lag issue on killing emacs, where x-clipboard takes ages to close
+  (setq x-select-enable-clipboard-manager nil) 
   (scroll-bar-mode -1)
   (tool-bar-mode -1)
   (menu-bar-mode -1)
