fixed typo which broke the config...

--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -129,7 +129,7 @@
   (unless (package-installed-p 'use-package)
      (package-install 'use-package))
   
-  (Require 'use-package)
+  (require 'use-package)
   (setq use-package-always-ensure t)
 
 #+end_src
