--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -377,6 +377,19 @@
 
 #+end_src
 
+** Org Roam
+
+#+begin_src emacs-lisp
+
+  (use-package org-roam
+    :ensure t
+    :custom
+    (org-roam-directory "~/RoamNotes")
+    :config
+    (org-roam-setup))
+
+#+end_src
+
 * Project and Git
 
 ** Projectile
