--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -342,18 +342,16 @@
   (use-package visual-fill-column
     :hook (org-mode . bp/org-mode-visual-fill))
 
+#+end_src
+
+** Org Tempo 
+
+#+begin_src emacs-lisp
   (require 'org-tempo)
 
   (add-to-list 'org-structure-template-alist '("sh" . "src shell"))
   (add-to-list 'org-structure-template-alist '("el" . "src emacs-lisp"))
   (add-to-list 'org-structure-template-alist '("py" . "src python"))
-
-#+end_src
-
-** Org Agenda
-
-#+begin_src emacs-lisp
-
 
 #+end_src
 
