switched setup to db-autosync
now roam autoupdates the database

--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -390,7 +390,7 @@
     :custom
     (org-roam-directory "~/RoamNotes")
     :config
-    (org-roam-setup))
+    (org-roam-db-autosync-mode))
 
 #+end_src
 
