added dashboard with config

--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -90,6 +90,28 @@
   
 #+end_src
 
+* Dashboard
+
+#+begin_src emacs-lisp
+  (use-package dashboard
+    :ensure t
+    :init
+    (setq initial-buffer-choice 'dashboard-open)
+    (setq dashboard-set-heading-icons t)
+    (setq dashboard-set-file-icons t)
+    (setq dashboard-banner-logo-title "Happy Hacking!")
+    (setq dashboard-startup-banner 'logo) 
+    (setq dashboard-center-content t) ;; set to t to center
+    (setq dashboard-items '((recents . 10)
+                            (agenda . 5)
+                            (projects . 5)
+                            (bookmarks . 3)
+                            ;;(registers . 3)
+                            ))
+    ;; (dashboard-modify-heading-icons '((recents . "file") (bookmarks . "book")))
+    (dashboard-setup-startup-hook))
+#+end_src
+
 * Default config setup
 
   #+begin_src emacs-lisp
