changed font to JetBrains Mono

--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -48,20 +48,19 @@
 
 #+begin_src emacs-lisp
 
-  ;; set up fonts 
   (set-face-attribute 'default nil
-                    :font "UbuntuMono Nerd Font Mono"
-                    :height 160
+                    :font "JetBrainsMono Nerd Font Mono"
+                    :height 130
                     :weight 'regular)
 
   (set-face-attribute 'variable-pitch nil
                     :font "Ubuntu Nerd Font"
-                    :height 160
+                    :height 150
                     :weight 'light)
 
   (set-face-attribute 'fixed-pitch nil
-                    :font "UbuntuMono Nerd Font Mono"
-                    :height 160
+                    :font "JetBrainsMono Nerd Font Mono"
+                    :height 130
                     :weight 'regular)
 
 #+end_src
