setup for company and lsp mode

--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -415,6 +415,59 @@
 
 #+end_src
 
+* Programming
+
+** FLYCHECK - Syntax Checker
+
+#+begin_src emacs-lisp
+
+  (use-package flycheck
+    :ensure t
+    :defer t
+    :diminish
+    :init (global-flycheck-mode))
+
+#+end_src
+
+** COMPANY Completion
+
+#+begin_src emacs-lisp
+
+  (use-package company
+    :defer 2
+    :diminish
+    :custom
+    (company-begin-commands '(self-insert-command))
+    (company-idle-delay .1)
+    (company-minimum-prefix-length 2)
+    (company-show-numbers t)
+    (company-tooltip-align-annotations 't)
+    (global-company-mode t))
+
+;;  (use-package company-box
+;;    :after company
+;;    :diminish
+;;    :hook (company-mode . company-box-mode))
+
+#+end_src
+
+** LSP-Mode
+
+#+begin_src emacs-lisp
+
+  (use-package lsp-mode
+    :commands (lsp lsp-deferred)
+    :init
+    ;; set prefix for lsp-command-keymap (few alternatives - "C-l", "C-c l")
+    (setq lsp-keymap-prefix "C-c l")
+    :config
+    (setq lsp-enable-which-key-integration t))
+
+  (use-package lua-mode)
+  (use-package python-mode)
+  (use-package web-mode)
+#+end_src
+
 * Project and Git
 
 ** Projectile
