--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -468,21 +468,48 @@
     :init
     ;; set prefix for lsp-command-keymap (few alternatives - "C-l", "C-c l")
     (setq lsp-keymap-prefix "C-c l")
-    :config
-    (setq lsp-enable-which-key-integration t))
-
+    :hook
+    ((web-mode . lsp)
+     (lsp-mode . lsp-enable-which-key-integration)))
   (use-package lsp-ui)
-
+  (use-package tree-sitter)
+  (use-package tree-sitter-langs)
+  (advice-add 'json-parse-buffer :around
+              (lambda (orig &rest rest)
+                (save-excursion
+                  (while (re-search-forward "\\\\u0000" nil t)
+                    (replace-match "")))
+                (apply orig rest)))
 #+end_src
 
 ** Languages
+
+- VUE needs still to be separated, and should run through webmode? 
 
 #+begin_src emacs-lisp
 
   (use-package lua-mode)
   (use-package python-mode)
-  (use-package web-mode)
-  
+  (use-package php-mode)
+
+#+end_src
+
+*** Web-Mode
+
+#+begin_src emacs-lisp
+
+  (use-package web-mode
+    :ensure t
+    :custom
+    (web-mode-markup-indent-offset 4)
+    (web-mode-css-indent-offset 2)
+    (web-mode-script-padding 0)
+    (web-mode-code-indent-offset 4))
+
+  (add-hook 'web-mode-hook (lambda () (whitespace-mode -1)))
+  (add-to-list 'auto-mode-alist '("\\.vue" . web-mode))
+  (add-to-list 'auto-mode-alist '("\\.php" . web-mode))
+
 #+end_src
 
 *** Typescript 
