--- a/.emacs.d/Emacs.org
+++ b/.emacs.d/Emacs.org
@@ -520,7 +520,7 @@
     :mode ("\\.ts\\'" "\\.js\\'")
     :hook (typescript-mode . lsp-deferred)
     :config
-    (setq typescript-indent-level 2))
+    (setq typescript-indent-level 4))
 
 #+end_src
 
@@ -532,6 +532,7 @@
     :init
     (smartparens-global-mode))
 
+  ;; fix indentation when pressing enter within parens 
   (defun indent-between-pair (&rest _ignored)
     (newline)
     (indent-according-to-mode)
@@ -544,13 +545,6 @@
 
 #+end_src
 
-- fix indentation when pressing enter within parens 
-
-#+begin_src emacs-lisp
-
-
-
-#+end_src
 
 * Project and Git
 
